[gd_scene load_steps=6 format=2]

[ext_resource path="res://DUNGEON/Item/gem/Material.material" type="Material" id=1]
[ext_resource path="res://DUNGEON/Script/Heart.gd" type="Script" id=2]
[ext_resource path="res://Sounds/pickup_heart.wav" type="AudioStream" id=3]


[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -0.250576, 0.00572474, -0.0500001, 0.5, 0.5, 0.1 ),
"array_data": PoolByteArray( 139, 75, 128, 190, 26, 59, 188, 62, 147, 33, 116, 179, 182, 34, 96, 0, 100, 0, 77, 129, 102, 34, 29, 57, 81, 113, 64, 190, 109, 241, 185, 62, 179, 204, 76, 61, 182, 34, 96, 0, 100, 0, 77, 129, 104, 38, 38, 57, 153, 155, 24, 190, 143, 146, 228, 62, 171, 204, 76, 61, 182, 34, 96, 0, 100, 0, 77, 129, 51, 40, 125, 56, 34, 122, 75, 190, 238, 17, 245, 62, 128, 29, 204, 179, 182, 34, 96, 0, 100, 0, 77, 129, 219, 37, 60, 56, 158, 3, 39, 190, 61, 93, 104, 62, 206, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 173, 39, 58, 58, 137, 30, 117, 189, 221, 247, 238, 62, 230, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 123, 42, 84, 56, 92, 159, 226, 185, 142, 197, 204, 62, 227, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 0, 44, 219, 56, 156, 97, 73, 56, 124, 223, 187, 61, 204, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 2, 44, 76, 59, 137, 30, 117, 189, 221, 247, 238, 62, 230, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 123, 42, 84, 56, 158, 3, 39, 190, 61, 93, 104, 62, 206, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 173, 39, 58, 58, 81, 113, 64, 190, 109, 241, 185, 62, 214, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 104, 38, 38, 57, 153, 155, 24, 190, 143, 146, 228, 62, 223, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 51, 40, 125, 56, 34, 122, 75, 190, 238, 17, 245, 62, 128, 29, 204, 179, 182, 34, 160, 0, 100, 0, 179, 127, 219, 37, 60, 56, 153, 155, 24, 190, 143, 146, 228, 62, 223, 204, 76, 189, 182, 34, 160, 0, 100, 0, 179, 127, 51, 40, 125, 56, 81, 113, 64, 190, 109, 241, 185, 62, 214, 204, 76, 189, 182, 34, 160, 0, 100, 0, 179, 127, 104, 38, 38, 57, 139, 75, 128, 190, 26, 59, 188, 62, 147, 33, 116, 179, 182, 34, 160, 0, 100, 0, 179, 127, 102, 34, 29, 57, 156, 97, 73, 56, 124, 223, 187, 61, 204, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 2, 44, 76, 59, 92, 159, 226, 185, 142, 197, 204, 62, 227, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 0, 44, 219, 56, 221, 164, 109, 61, 214, 177, 238, 62, 233, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 192, 44, 85, 56, 126, 150, 40, 62, 182, 49, 108, 62, 221, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 29, 46, 50, 58, 78, 147, 77, 62, 65, 155, 245, 62, 194, 109, 47, 180, 19, 95, 175, 0, 123, 0, 29, 127, 147, 46, 57, 56, 123, 46, 26, 62, 57, 51, 229, 62, 237, 204, 76, 189, 19, 95, 175, 0, 123, 0, 29, 127, 239, 45, 122, 56, 221, 164, 109, 61, 214, 177, 238, 62, 233, 204, 76, 189, 19, 95, 175, 0, 123, 0, 29, 127, 192, 44, 85, 56, 234, 109, 158, 61, 124, 72, 1, 63, 212, 11, 32, 180, 19, 95, 175, 0, 123, 0, 29, 127, 255, 44, 6, 56, 234, 109, 158, 61, 124, 72, 1, 63, 212, 11, 32, 180, 164, 81, 229, 0, 36, 0, 135, 127, 255, 44, 6, 56, 221, 164, 109, 61, 214, 177, 238, 62, 233, 204, 76, 189, 164, 81, 229, 0, 36, 0, 135, 127, 192, 44, 85, 56, 92, 159, 226, 185, 142, 197, 204, 62, 227, 204, 76, 189, 164, 81, 229, 0, 36, 0, 135, 127, 0, 44, 219, 56, 248, 19, 23, 186, 238, 85, 213, 62, 86, 99, 241, 179, 164, 81, 229, 0, 36, 0, 135, 127, 0, 44, 185, 56, 168, 200, 96, 62, 1, 138, 67, 62, 40, 171, 193, 179, 79, 243, 158, 0, 98, 0, 79, 127, 209, 46, 131, 58, 126, 150, 40, 62, 182, 49, 108, 62, 221, 204, 76, 189, 79, 243, 158, 0, 98, 0, 79, 127, 29, 46, 50, 58, 178, 142, 63, 62, 238, 51, 185, 62, 231, 204, 76, 189, 79, 243, 158, 0, 98, 0, 79, 127, 102, 46, 41, 57, 238, 104, 127, 62, 132, 241, 186, 62, 90, 200, 23, 180, 79, 243, 158, 0, 98, 0, 79, 127, 51, 47, 34, 57, 248, 19, 23, 186, 238, 85, 213, 62, 86, 99, 241, 179, 92, 82, 229, 0, 35, 0, 121, 127, 0, 44, 185, 56, 92, 159, 226, 185, 142, 197, 204, 62, 227, 204, 76, 189, 92, 82, 229, 0, 35, 0, 121, 127, 0, 44, 219, 56, 137, 30, 117, 189, 221, 247, 238, 62, 230, 204, 76, 189, 92, 82, 229, 0, 35, 0, 121, 127, 123, 42, 84, 56, 174, 105, 163, 189, 45, 119, 1, 63, 98, 128, 3, 180, 92, 82, 229, 0, 35, 0, 121, 127, 248, 41, 5, 56, 126, 150, 40, 62, 182, 49, 108, 62, 221, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 29, 46, 50, 58, 221, 164, 109, 61, 214, 177, 238, 62, 233, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 192, 44, 85, 56, 123, 46, 26, 62, 57, 51, 229, 62, 237, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 239, 45, 122, 56, 178, 142, 63, 62, 238, 51, 185, 62, 231, 204, 76, 189, 0, 0, 129, 0, 127, 0, 0, 127, 102, 46, 41, 57, 174, 105, 163, 189, 45, 119, 1, 63, 98, 128, 3, 180, 235, 94, 174, 0, 122, 0, 224, 127, 248, 41, 5, 56, 137, 30, 117, 189, 221, 247, 238, 62, 230, 204, 76, 189, 235, 94, 174, 0, 122, 0, 224, 127, 123, 42, 84, 56, 153, 155, 24, 190, 143, 146, 228, 62, 223, 204, 76, 189, 235, 94, 174, 0, 122, 0, 224, 127, 51, 40, 125, 56, 34, 122, 75, 190, 238, 17, 245, 62, 128, 29, 204, 179, 235, 94, 174, 0, 122, 0, 224, 127, 219, 37, 60, 56, 139, 75, 128, 190, 26, 59, 188, 62, 147, 33, 116, 179, 177, 242, 158, 0, 98, 0, 177, 127, 102, 34, 29, 57, 81, 113, 64, 190, 109, 241, 185, 62, 214, 204, 76, 189, 177, 242, 158, 0, 98, 0, 177, 127, 104, 38, 38, 57, 158, 3, 39, 190, 61, 93, 104, 62, 206, 204, 76, 189, 177, 242, 158, 0, 98, 0, 177, 127, 173, 39, 58, 58, 125, 175, 94, 190, 179, 110, 62, 62, 72, 179, 119, 178, 177, 242, 158, 0, 98, 0, 177, 127, 229, 36, 141, 58, 125, 175, 94, 190, 179, 110, 62, 62, 72, 179, 119, 178, 208, 198, 155, 0, 114, 0, 201, 127, 229, 36, 141, 58, 158, 3, 39, 190, 61, 93, 104, 62, 206, 204, 76, 189, 208, 198, 155, 0, 114, 0, 201, 127, 173, 39, 58, 58, 156, 97, 73, 56, 124, 223, 187, 61, 204, 204, 76, 189, 208, 198, 155, 0, 114, 0, 201, 127, 2, 44, 76, 59, 154, 72, 134, 56, 153, 150, 187, 59, 38, 63, 130, 177, 208, 198, 155, 0, 114, 0, 201, 127, 2, 44, 250, 59, 154, 72, 134, 56, 153, 150, 187, 59, 38, 63, 130, 177, 49, 198, 155, 0, 114, 0, 55, 127, 2, 44, 250, 59, 156, 97, 73, 56, 124, 223, 187, 61, 204, 204, 76, 189, 49, 198, 155, 0, 114, 0, 55, 127, 2, 44, 76, 59, 126, 150, 40, 62, 182, 49, 108, 62, 221, 204, 76, 189, 49, 198, 155, 0, 114, 0, 55, 127, 29, 46, 50, 58, 168, 200, 96, 62, 1, 138, 67, 62, 40, 171, 193, 179, 49, 198, 155, 0, 114, 0, 55, 127, 209, 46, 131, 58, 134, 30, 117, 189, 221, 247, 238, 62, 164, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 123, 42, 84, 56, 153, 155, 24, 190, 143, 146, 228, 62, 171, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 51, 40, 125, 56, 81, 113, 64, 190, 109, 241, 185, 62, 179, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 104, 38, 38, 57, 158, 3, 39, 190, 65, 93, 104, 62, 188, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 173, 39, 58, 58, 231, 116, 73, 56, 128, 223, 187, 61, 190, 204, 76, 61, 49, 198, 101, 0, 114, 0, 201, 129, 2, 44, 76, 59, 154, 72, 134, 56, 153, 150, 187, 59, 38, 63, 130, 177, 49, 198, 101, 0, 114, 0, 201, 129, 2, 44, 250, 59, 168, 200, 96, 62, 1, 138, 67, 62, 40, 171, 193, 179, 49, 198, 101, 0, 114, 0, 201, 129, 209, 46, 131, 58, 126, 150, 40, 62, 186, 49, 108, 62, 173, 204, 76, 61, 49, 198, 101, 0, 114, 0, 201, 129, 29, 46, 50, 58, 158, 3, 39, 190, 65, 93, 104, 62, 188, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 173, 39, 58, 58, 231, 116, 73, 56, 128, 223, 187, 61, 190, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 2, 44, 76, 59, 243, 156, 226, 185, 142, 197, 204, 62, 167, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 0, 44, 219, 56, 134, 30, 117, 189, 221, 247, 238, 62, 164, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 123, 42, 84, 56, 158, 3, 39, 190, 65, 93, 104, 62, 188, 204, 76, 61, 208, 198, 101, 0, 114, 0, 55, 129, 173, 39, 58, 58, 125, 175, 94, 190, 179, 110, 62, 62, 72, 179, 119, 178, 208, 198, 101, 0, 114, 0, 55, 129, 229, 36, 141, 58, 154, 72, 134, 56, 153, 150, 187, 59, 38, 63, 130, 177, 208, 198, 101, 0, 114, 0, 55, 129, 2, 44, 250, 59, 231, 116, 73, 56, 128, 223, 187, 61, 190, 204, 76, 61, 208, 198, 101, 0, 114, 0, 55, 129, 2, 44, 76, 59, 81, 113, 64, 190, 109, 241, 185, 62, 179, 204, 76, 61, 177, 242, 98, 0, 98, 0, 79, 129, 104, 38, 38, 57, 139, 75, 128, 190, 26, 59, 188, 62, 147, 33, 116, 179, 177, 242, 98, 0, 98, 0, 79, 129, 102, 34, 29, 57, 125, 175, 94, 190, 179, 110, 62, 62, 72, 179, 119, 178, 177, 242, 98, 0, 98, 0, 79, 129, 229, 36, 141, 58, 158, 3, 39, 190, 65, 93, 104, 62, 188, 204, 76, 61, 177, 242, 98, 0, 98, 0, 79, 129, 173, 39, 58, 58, 134, 30, 117, 189, 221, 247, 238, 62, 164, 204, 76, 61, 235, 94, 82, 0, 122, 0, 32, 129, 123, 42, 84, 56, 174, 105, 163, 189, 45, 119, 1, 63, 98, 128, 3, 180, 235, 94, 82, 0, 122, 0, 32, 129, 248, 41, 5, 56, 34, 122, 75, 190, 238, 17, 245, 62, 128, 29, 204, 179, 235, 94, 82, 0, 122, 0, 32, 129, 219, 37, 60, 56, 153, 155, 24, 190, 143, 146, 228, 62, 171, 204, 76, 61, 235, 94, 82, 0, 122, 0, 32, 129, 51, 40, 125, 56, 231, 116, 73, 56, 128, 223, 187, 61, 190, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 2, 44, 76, 59, 126, 150, 40, 62, 186, 49, 108, 62, 173, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 29, 46, 50, 58, 225, 164, 109, 61, 214, 177, 238, 62, 161, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 192, 44, 85, 56, 243, 156, 226, 185, 142, 197, 204, 62, 167, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 0, 44, 219, 56, 243, 156, 226, 185, 142, 197, 204, 62, 167, 204, 76, 61, 92, 82, 27, 0, 35, 0, 135, 129, 0, 44, 219, 56, 248, 19, 23, 186, 238, 85, 213, 62, 86, 99, 241, 179, 92, 82, 27, 0, 35, 0, 135, 129, 0, 44, 185, 56, 174, 105, 163, 189, 45, 119, 1, 63, 98, 128, 3, 180, 92, 82, 27, 0, 35, 0, 135, 129, 248, 41, 5, 56, 134, 30, 117, 189, 221, 247, 238, 62, 164, 204, 76, 61, 92, 82, 27, 0, 35, 0, 135, 129, 123, 42, 84, 56, 126, 150, 40, 62, 186, 49, 108, 62, 173, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 29, 46, 50, 58, 178, 142, 63, 62, 58, 77, 184, 62, 162, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 102, 46, 44, 57, 123, 46, 26, 62, 133, 76, 228, 62, 156, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 239, 45, 126, 56, 225, 164, 109, 61, 214, 177, 238, 62, 161, 204, 76, 61, 0, 0, 127, 0, 127, 0, 0, 129, 192, 44, 85, 56, 126, 150, 40, 62, 186, 49, 108, 62, 173, 204, 76, 61, 79, 243, 98, 0, 98, 0, 176, 129, 29, 46, 50, 58, 168, 200, 96, 62, 1, 138, 67, 62, 40, 171, 193, 179, 79, 243, 98, 0, 98, 0, 176, 129, 209, 46, 131, 58, 238, 104, 127, 62, 132, 241, 186, 62, 90, 200, 23, 180, 79, 243, 98, 0, 98, 0, 176, 129, 51, 47, 34, 57, 178, 142, 63, 62, 58, 77, 184, 62, 162, 204, 76, 61, 79, 243, 98, 0, 98, 0, 176, 129, 102, 46, 44, 57, 225, 164, 109, 61, 214, 177, 238, 62, 161, 204, 76, 61, 164, 81, 27, 0, 36, 0, 121, 129, 192, 44, 85, 56, 234, 109, 158, 61, 124, 72, 1, 63, 212, 11, 32, 180, 164, 81, 27, 0, 36, 0, 121, 129, 255, 44, 6, 56, 248, 19, 23, 186, 238, 85, 213, 62, 86, 99, 241, 179, 164, 81, 27, 0, 36, 0, 121, 129, 0, 44, 185, 56, 243, 156, 226, 185, 142, 197, 204, 62, 167, 204, 76, 61, 164, 81, 27, 0, 36, 0, 121, 129, 0, 44, 219, 56, 123, 46, 26, 62, 133, 76, 228, 62, 156, 204, 76, 61, 75, 31, 97, 0, 100, 0, 179, 129, 239, 45, 126, 56, 178, 142, 63, 62, 58, 77, 184, 62, 162, 204, 76, 61, 75, 31, 97, 0, 100, 0, 179, 129, 102, 46, 44, 57, 238, 104, 127, 62, 132, 241, 186, 62, 90, 200, 23, 180, 75, 31, 97, 0, 100, 0, 179, 129, 51, 47, 34, 57, 78, 147, 77, 62, 65, 155, 245, 62, 194, 109, 47, 180, 75, 31, 97, 0, 100, 0, 179, 129, 147, 46, 57, 56, 178, 142, 63, 62, 238, 51, 185, 62, 231, 204, 76, 189, 75, 32, 160, 0, 99, 0, 78, 127, 102, 46, 41, 57, 123, 46, 26, 62, 57, 51, 229, 62, 237, 204, 76, 189, 75, 32, 160, 0, 99, 0, 78, 127, 239, 45, 122, 56, 78, 147, 77, 62, 65, 155, 245, 62, 194, 109, 47, 180, 75, 32, 160, 0, 99, 0, 78, 127, 147, 46, 57, 56, 238, 104, 127, 62, 132, 241, 186, 62, 90, 200, 23, 180, 75, 32, 160, 0, 99, 0, 78, 127, 51, 47, 34, 57, 123, 46, 26, 62, 133, 76, 228, 62, 156, 204, 76, 61, 19, 94, 82, 0, 123, 0, 226, 129, 239, 45, 126, 56, 78, 147, 77, 62, 65, 155, 245, 62, 194, 109, 47, 180, 19, 94, 82, 0, 123, 0, 226, 129, 147, 46, 57, 56, 234, 109, 158, 61, 124, 72, 1, 63, 212, 11, 32, 180, 19, 94, 82, 0, 123, 0, 227, 129, 255, 44, 6, 56, 225, 164, 109, 61, 214, 177, 238, 62, 161, 204, 76, 61, 19, 94, 82, 0, 123, 0, 226, 129, 192, 44, 85, 56 ),
"array_index_data": PoolByteArray( 3, 0, 1, 0, 0, 0, 3, 0, 2, 0, 1, 0, 7, 0, 5, 0, 4, 0, 7, 0, 6, 0, 5, 0, 11, 0, 9, 0, 8, 0, 11, 0, 10, 0, 9, 0, 15, 0, 13, 0, 12, 0, 15, 0, 14, 0, 13, 0, 19, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 23, 0, 21, 0, 20, 0, 23, 0, 22, 0, 21, 0, 27, 0, 25, 0, 24, 0, 27, 0, 26, 0, 25, 0, 31, 0, 29, 0, 28, 0, 31, 0, 30, 0, 29, 0, 35, 0, 33, 0, 32, 0, 35, 0, 34, 0, 33, 0, 39, 0, 37, 0, 36, 0, 39, 0, 38, 0, 37, 0, 43, 0, 41, 0, 40, 0, 43, 0, 42, 0, 41, 0, 47, 0, 45, 0, 44, 0, 47, 0, 46, 0, 45, 0, 51, 0, 49, 0, 48, 0, 51, 0, 50, 0, 49, 0, 55, 0, 53, 0, 52, 0, 55, 0, 54, 0, 53, 0, 59, 0, 57, 0, 56, 0, 59, 0, 58, 0, 57, 0, 63, 0, 61, 0, 60, 0, 63, 0, 62, 0, 61, 0, 67, 0, 65, 0, 64, 0, 67, 0, 66, 0, 65, 0, 71, 0, 69, 0, 68, 0, 71, 0, 70, 0, 69, 0, 75, 0, 73, 0, 72, 0, 75, 0, 74, 0, 73, 0, 79, 0, 77, 0, 76, 0, 79, 0, 78, 0, 77, 0, 83, 0, 81, 0, 80, 0, 83, 0, 82, 0, 81, 0, 87, 0, 85, 0, 84, 0, 87, 0, 86, 0, 85, 0, 91, 0, 89, 0, 88, 0, 91, 0, 90, 0, 89, 0, 95, 0, 93, 0, 92, 0, 95, 0, 94, 0, 93, 0, 99, 0, 97, 0, 96, 0, 99, 0, 98, 0, 97, 0, 103, 0, 101, 0, 100, 0, 103, 0, 102, 0, 101, 0, 107, 0, 105, 0, 104, 0, 107, 0, 106, 0, 105, 0, 111, 0, 109, 0, 108, 0, 111, 0, 110, 0, 109, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 168,
"material": ExtResource( 1 ),
"name": "Plane.002",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 112
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.253189, 0.213209, 0.109767 )

[node name="Heart" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.63559, 0, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Heart2" type="MeshInstance" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 10, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0212, 0.282949, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "fx"
[connection signal="body_entered" from="." to="." method="_on_Heart_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
